# card-deepagent

./: .gitignore  LICENSE  MCP技术讨论总结.md  README.md  pyproject.toml  start.sh  任务拆分.md  实施文档.md  开发进度.md  方案书-Summarization.md
config/: settings.py
data/: skills.json
skills/base/gift-card/: SKILL.md  apis.yaml
skills/base/market-info/: SKILL.md  apis.yaml
skills/base/order-guide/: SKILL.md  apis.yaml
src/: agent.py  api.py  backend.py  checkpointer.py  context.py  db.py  mock_server.py  stream.py
src/mcp/: cleanup.py  loader.py
src/middleware/: trading_output.py  user_mcp.py
src/schemas/: trading_result.py
src/tools/: api_executor.py  api_schema.py  confirm_popup.py
static/: index.html
tests/: mock_api_server.py  test_agent.py  test_agent_skills.py  test_api.py  test_api_executor.py  test_backend.py  test_card_e2e.py  test_checkpointer.py  test_context.py  test_mcp_api.py  test_mcp_cleanup.py  test_mcp_e2e.py  test_mcp_loader.py  test_middleware.py  test_popup.py  test_popup_e2e.py  test_resume.py  test_skills.py  test_skills_api.py  test_stream.py  test_trading_result.py  test_user_mcp_middleware.py
