[project]
name = "trading-deepagent"
version = "0.1.0"
description = "交易助手 — 基于 Deep Agents SDK 的智能交易助手框架"
requires-python = ">=3.11,<4.0"
dependencies = [
    "deepagents>=0.6.12",
    "langgraph>=1.0.0",
    "langgraph-checkpoint-postgres>=3.0.0",
    "langchain>=1.3.0",
    "langchain-core>=1.4.0",
    "langchain-deepseek>=1.1.0",
    "psycopg[binary]>=3.2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sse-starlette>=2.2.0",
    "pydantic>=2.0.0",
    "httpx>=0.28.0",
    "mcp>=1.28.0",
    "langchain-mcp-adapters>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["UP006", "UP007", "E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
